--- a/frontend/paw/src/app/paw-customerform/paw-customerform.component.html
+++ b/frontend/paw/src/app/paw-customerform/paw-customerform.component.html
@@ -1,14 +1,33 @@
-<form>
-    <div class="form-group">
-        <label for="firstName">Fornavn</label>
-        <input  id="firstName" type="text" class="form-control">
-    </div>
-    <div class="form-group">
-        <label for="comment">Kommentar</label>
-        <textarea id="comment" cols="30" rows="10" class="form-control">
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-2 justify-content-around">
+            <app-paw-navbar></app-paw-navbar>
+        </div>
+        <div class="col-8 mainpadding">
+            <form [formGroup]="customerForm" (ngSubmit)="createOrUpdateCustomer()">
+                <div class="form-group">
+                    <label for="firstname">Fornavn</label>
+                    <input 
+                        formControlName="firstname"
+                        id="firstname" 
+                        type="text" 
+                        class="form-control">
+                        <div *ngIf="firstname?.touched && firstname?.invalid" class="alert alert-danger">
+                            <div *ngIf="firstname?.errors?.['required']" >Fornavn skal angives</div>
+                        </div>
+                </div>
+            
+                <!--
+                <div class="form-group">
+                    <label for="comment">Kommentar</label>
+                    <textarea id="comment" cols="30" rows="10" class="form-control">
 
-        </textarea>
+                    </textarea>
+                </div>
+                -->
+                <br>
+                <button class="btn btn-primary btn-sm">Gem</button>
+            </form>
+        </div>
     </div>
-    <br>
-    <button class="btn btn-primary">Gem</button>
-</form>
+</div>
