--- a/frontend/paw/src/app/paw-employeeform/paw-employeeform.component.html
+++ b/frontend/paw/src/app/paw-employeeform/paw-employeeform.component.html
@@ -1,1 +1,90 @@
-<p>paw-employeeform works!</p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-2 justify-content-around">
+            <app-paw-navbar></app-paw-navbar>
+        </div>
+        <div class="col-8 mainpadding">
+                <form [formGroup]="employeeForm" (ngSubmit)="createOrUpdateEmployee()">  
+                    <div class="form-group">
+                        <label for="firstname">Fornavn</label>
+                        <input 
+                            formControlName="firstname"
+                            id="firstname" 
+                            type="text" 
+                            class="form-control">
+                            <div *ngIf="firstname?.touched && firstname?.invalid" class="alert alert-danger">
+                                <div *ngIf="firstname?.errors?.['required']" >Fornavn skal angives</div>
+                            </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="lastname">Efternavn</label>
+                        <input 
+                            formControlName="lastname"
+                            id="lastname" 
+                            type="text" 
+                            class="form-control">
+                            <div *ngIf="lastname?.touched && lastname?.invalid" class="alert alert-danger">
+                                <div *ngIf="lastname?.errors?.['required']" >Efternavn skal angives</div>
+                            </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input 
+                            formControlName="email"
+                            id="email" 
+                            type="text" 
+                            class="form-control">
+                            <div *ngIf="email?.touched && email?.invalid" class="alert alert-danger">
+                                <div *ngIf="email?.errors?.['required']" >Email skal angives</div>
+                            </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="phone">Telefon</label>
+                        <input 
+                            formControlName="phone"
+                            id="phone" 
+                            type="text" 
+                            class="form-control">
+                            <div *ngIf="phone?.touched && phone?.invalid" class="alert alert-danger">
+                                <div *ngIf="phone?.errors?.['required']" >Telefon skal angives</div>
+                            </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Kodeord</label>
+                        <input 
+                            formControlName="password"
+                            id="password" 
+                            type="text" 
+                            class="form-control">
+                            <div *ngIf="password?.touched && password?.invalid" class="alert alert-danger">
+                                <div *ngIf="password?.errors?.['required']" >Kodeordet skal angives</div>
+                            </div>
+                    </div>
+                    <br />
+                    <div *ngIf="!curEditMode">
+                        <button class="btn btn-primary btn-sm" type="submit">Opret medarbejder</button>
+                    </div>
+                    <div *ngIf="curEditMode">
+                        <button class="btn btn-primary btn-sm" type="submit">Opdater medarbejder</button>
+                        <button class="btn btn-primary btn-sm mx-2" type="button" (click)="setEditModeFalse()">Afbryd</button>
+                    </div>
+                </form>
+                
+                <br />
+                <div class="form-group">
+                    <label>Status: </label>
+                    <label>{{getStatusLabel()}}</label>
+                </div>
+                <br />
+                <br />
+                <ul class="list-group">
+                    <li 
+                    *ngFor="let emp of employees"
+                    class="list-group-item">
+                    {{ emp.firstName }} {{ emp.lastName}} {{ emp.email}} {{ emp.phone}} <button class="btn btn-primary btn-sm mx-2" (click)="editEmployee(emp.id)">Opdater</button><button class="btn btn-primary btn-sm mx-2" (click)="deleteEmployee(emp.id)">Slet</button>
+                    </li>
+                
+                </ul>
+    <div>
+</div>
+
