--- a/frontend/paw/src/app/paw-customerform/paw-customerform.component.html
+++ b/frontend/paw/src/app/paw-customerform/paw-customerform.component.html
@@ -16,6 +16,73 @@
                             <div *ngIf="firstname?.errors?.['required']" >Fornavn skal angives</div>
                         </div>
                 </div>
+                <div class="form-group">
+                    <label for="lastname">Efternavn</label>
+                    <input 
+                        formControlName="lastname"
+                        id="lastname" 
+                        type="text" 
+                        class="form-control">
+                        <div *ngIf="lastname?.touched && lastname?.invalid" class="alert alert-danger">
+                            <div *ngIf="lastname?.errors?.['required']" >Efternavn skal angives</div>
+                        </div>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input 
+                        formControlName="email"
+                        id="email" 
+                        type="text" 
+                        class="form-control">
+                        <div *ngIf="email?.touched && email?.invalid" class="alert alert-danger">
+                            <div *ngIf="email?.errors?.['required']" >Email skal angives</div>
+                        </div>
+                </div>
+                <div class="form-group">
+                    <label for="phone">Telefon</label>
+                    <input 
+                        formControlName="phone"
+                        id="phone" 
+                        type="text" 
+                        class="form-control">
+                        <div *ngIf="phone?.touched && phone?.invalid" class="alert alert-danger">
+                            <div *ngIf="phone?.errors?.['required']" >Telefon skal angives</div>
+                        </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="address">Adresse</label>
+                    <input 
+                        formControlName="address"
+                        id="address" 
+                        type="text" 
+                        class="form-control">
+                        <div *ngIf="address?.touched && address?.invalid" class="alert alert-danger">
+                            <div *ngIf="address?.errors?.['required']" >Adressen skal angives</div>
+                        </div>
+                </div>
+                <div class="form-group">
+                    <label for="zip">Postnummer</label>
+                    <input 
+                        formControlName="zip"
+                        id="zip" 
+                        type="text" 
+                        class="form-control">
+                        <div *ngIf="zip?.touched && zip?.invalid" class="alert alert-danger">
+                            <div *ngIf="zip?.errors?.['required']" >Postnummeret skal angives</div>
+                        </div>
+                </div>
+                <div class="form-group">
+                    <label for="country">Land</label>
+                    <input 
+                        formControlName="country"
+                        id="country" 
+                        type="text" 
+                        class="form-control">
+                        <div *ngIf="country?.touched && country?.invalid" class="alert alert-danger">
+                            <div *ngIf="country?.errors?.['required']" >Land skal angives</div>
+                        </div>
+                </div>
             
                 <!--
                 <div class="form-group">
