--- a/frontend/paw/src/app/paw-customerform/paw-customerform.component.html
+++ b/frontend/paw/src/app/paw-customerform/paw-customerform.component.html
@@ -93,7 +93,7 @@
                 </div>
                 -->
                 <br>
-                <button class="btn btn-primary btn-sm">Gem</button>
+                <button class="btn btn-primary btn-sm" type="submit">Gem</button>
             </form>
         </div>
     </div>
