--- a/frontend/paw/src/app/paw-customerform/paw-customerform.component.html
+++ b/frontend/paw/src/app/paw-customerform/paw-customerform.component.html
@@ -93,8 +93,32 @@
                 </div>
                 -->
                 <br>
-                <button class="btn btn-primary btn-sm" type="submit">Gem</button>
+                <div *ngIf="!inEditMode">
+                    <button class="btn btn-primary btn-sm" type="submit">Opret medarbejder</button>
+                </div>
+                <div *ngIf="inEditMode">
+                    <button class="btn btn-primary btn-sm" type="submit">Opdater medarbejder</button>
+                    <button class="btn btn-primary btn-sm mx-2" type="button" (click)="setEditModeFalse()">Afbryd</button>
+                </div>
+
             </form>
+            <div class="form-group">
+                <label>Status: </label>
+                <label>{{getStatusLabel()}}</label>
+            </div>
+            <br />
+            <br />
+            <ul class="list-group">
+                <li 
+                *ngFor="let cust of customers"
+                class="list-group-item">
+                <span>{{ cust.firstName }} {{ cust.lastName}} {{ cust.email}} {{ cust.phone}} </span>
+                <button class="btn btn-primary btn-sm mx-2 float-end" (click)="editCustomer(cust.id)">Opdater</button><button class="btn btn-primary btn-sm mx-2 float-end" (click)="deleteCustomer(cust.id)">Slet</button>
+                </li>
+            
+            </ul>
+
         </div>
+        
     </div>
 </div>
