--- a/frontend/paw/src/app/paw-logon/paw-logon.component.html
+++ b/frontend/paw/src/app/paw-logon/paw-logon.component.html
@@ -1,1 +1,9 @@
-<p>paw-logon works!</p>
+<form class="form-signin" #f="ngForm" (ngSubmit)="signIn(f.value)">
+    <h2 class="form-signin-heading">Login</h2>
+    <div *ngIf="invalidLogin" class="alert alert-danger">Forkert brugernavn og/eller kodeord.</div>
+    <label for="inputEmail" class="sr-only">Email adresse</label>
+    <input type="email" id="inputEmail" name="email" ngModel class="form-control" placeholder="Email adresse" required autofocus>
+    <label for="inputPassword" class="sr-only">Kodeord</label>
+    <input type="password" id="inputPassword" name="password" ngModel class="form-control" placeholder="Password" required>
+    <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
+  </form>
