--- a/frontend/angular/src/app/paw-employeeform/paw-employeeform.component.html
+++ b/frontend/angular/src/app/paw-employeeform/paw-employeeform.component.html
@@ -36,6 +36,7 @@
                             class="form-control">
                             <div *ngIf="!inEditMode && email?.touched && email?.invalid" class="alert alert-danger">
                                 <div *ngIf="email?.errors?.['required']" >Email skal angives</div>
+                                <div *ngIf="email?.errors?.['emailExists']" >Email skal være unik</div>
                             </div>
                     </div>
                     <div class="form-group">
