--- a/frontend/angular/src/app/paw-tasklist/paw-tasklist.component.html
+++ b/frontend/angular/src/app/paw-tasklist/paw-tasklist.component.html
@@ -6,13 +6,12 @@
         <div class="col-8 mainpadding">
             <ul class="list-group">
                 <li 
-                *ngFor="let curTask of tasks" 
+                *ngFor="let curTask of tasksWithInfo" [ngStyle]="{'color' : getColor(curTask.startDate)}"
                 class="list-group-item">
-                {{ curTask.taskName }}  - Dato:{{ curTask.startDate}} - kl:{{ curTask.startHour}}  - forventet tidsforbrug: {{ curTask.estimatedHours }}<br>
-                {{ curTask.description }} <br>
-                {{ curTask.taskGuid }}
+                {{ curTask.taskName }}  - Dato:{{ getDateWithOutTime(curTask.startDate)}} - kl:{{ curTask.startHour}}  - forventet tidsforbrug: {{ curTask.estimatedHours }}<br>
+                {{ curTask.description }}<br>
+                Kunde: &nbsp;{{ curTask.customerInfo }} 
                 <button class="btn btn-primary btn-sm mx-2 float-end" [routerLink]="['/timeregistration',curTask.taskGuid]">Tid</button>
                 </li> 
-            
             </ul>
         </div>
